# Trade_bot

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CHANGES_MANIFEST.md  CHECKLIST.md  COMMAND_RECAP.md  GITHUB_PUSH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LOCAL_RUN.md  Makefile  PHASE2_CHANGELOG.md  PHASE2_DELIVERY.md  PHASE2_FINAL_DELIVERY.md  PHASE2_INTEGRATION_COMPLETE.md  PHASE2_QUICKSTART.md  PHASE2_SUMMARY.md  PHASE3_CHANGES.md  PHASE3_DIFFS.md  PHASE4_SUMMARY.md  PHASE51_SUMMARY.md  PHASE51_TOUCHUPS.md  PHASE52_SUMMARY.md  PROFIT_AWARE_LEARNING.md  PUSH_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REPORT.md  SANITY_CHECKLIST.md  SETUP_COMPLETE.txt  START_HERE.md  SUMMARY.md  WINDOWS_COMMANDS.md  env.example.profit_aware  env.example.template  index.html  (+2 more)
.artifacts/: ISSUE_TEMPLATES_v0.6.5.md  PAGES_DEPLOY_README.md  POST_MERGE_CHECKLIST.md  PR_DESCRIPTION.md  RELEASE_NOTES_v0.6.5.md  RELEASE_OPS_CHECKLIST.md  V0.6.5_RUNBOOK_STATUS.md
badges/: .gitkeep
benchmarks/: baseline.json
data/: news_parsed.jsonl  news_raw.jsonl  news_scored.jsonl
public/: index.html
reports/: index.html  opportunities.csv
scripts/: accept_phase2.py  generate_status_badge.py  generate_trend_plots.py  make_sample_data.py  pack_sweep.py  run_daily_scan.ps1  run_daily_scan.sh  seed_ohlcv.py  train_patchtst.py
sweeps/: ci_smoke.yaml  example_fixed_vs_vol.yaml  example_threshold.yaml  perf_budget.yaml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_features.py  test_logging.py  (+1 more)
(+241 files in other folders)
